# entropy_backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  MIGRATIONS.md  README.md  alembic.ini  entropy.db  entrypoint.sh  pyproject.toml
alembic/: README  env.py
alembic/versions/: 001_initial_schema.py
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: dashboard.py  tasks.py  user.py
app/core/: config.py  database.py
app/models/: task.py  user.py
app/schemas/: dashboard.py  task.py
app/services/: ai_service.py  game_service.py  task_service.py
app/utils/: datetime_utils.py
